# rust-cookbook

./: .travis.yml  404.html  CHANGES.md  CONTRIBUTING.md  Cargo.toml  README.md  about.html  algorithms.html  book.toml  cli.html  compression.html  concurrency.html  cryptography.html  data_structures.html  database.html  datetime.html  development_tools.html  encoding.html  errors.html  file.html  hardware.html  intro.html  mem.html  net.html  os.html  print.html  science.html  searchindex.js  searchindex.json  text.html  web.html
.github/: PULL_REQUEST_TEMPLATE.md
algorithms/: randomness.html  sorting.html
algorithms/randomness/: Cargo.toml
algorithms/randomness/examples/: basic_usage.rs  normal_distribution.rs  tuple_distribution.rs
algorithms/randomness/src/: lib.rs
algorithms/sorting/: Cargo.toml
algorithms/sorting/examples/: sort-struct.rs
ci/: deploy.sh  dictionary.txt  install_deps.sh  test_script.sh
cli/: ansi_terminal.html  arguments.html
cli/ansi_terminal/examples/: term_style.rs
cli/ansi_terminal/src/: lib.rs
cli/arguments/: Cargo.toml
cli/arguments/examples/: clap_basic.rs  clap_with_pathbuf.rs
compression/: tar.html
compression/tar/: Cargo.toml
compression/tar/examples/: tar-compress.rs  tar-decompress.rs  tar-strip-prefix.rs
compression/tar/src/: lib.rs
concurrency/: parallel.html  threads.html
concurrency/parallel/src/: lib.rs
concurrency/thread/: Cargo.toml
concurrency/thread/examples/: crossbeam-spawn.rs  crossbeam-spsc.rs  threadpool-fractal.rs
cookbook_utils/src/: lib.rs
cryptography/: encryption.html  hashing.html
cryptography/encryption/: Cargo.toml
cryptography/encryption/src/: lib.rs
cryptography/hashing/: Cargo.toml
cryptography/hashing/src/: lib.rs
data_structures/: bitfield.html
data_structures/bitfield/examples/: bitfield.rs
data_structures/bitfield/src/: lib.rs
database/: postgres.html  sqlite.html
database/postgres/examples/: pg_insert_select.rs
database/postgres/src/: lib.rs
database/sqlite/: Cargo.toml
database/sqlite/examples/: initialization.rs  insert_select.rs  transactions.rs
database/sqlite/src/: lib.rs
datetime/: duration.html  parse.html
datetime/duration/: Cargo.toml
datetime/duration/examples/: timezone.rs
datetime/duration/src/: lib.rs
datetime/parse/: Cargo.toml
datetime/parse/examples/: billion_seconds.rs  custom_formats.rs
datetime/parse/src/: lib.rs
development_tools/: build_tools.html  debugging.html  versioning.html
development_tools/build_tools/cc-bundled-cpp/: Cargo.toml
development_tools/build_tools/cc-bundled-static/: build.rs
development_tools/build_tools/cc-defines/: build.rs
development_tools/debugging/: config_log.html  log.html
development_tools/debugging/config_log/: Cargo.toml
development_tools/debugging/config_log/examples/: log-custom.rs  log-env-variable.rs  log-timestamp.rs
development_tools/debugging/config_log/src/: lib.rs
development_tools/debugging/log/: Cargo.toml
development_tools/debugging/log/examples/: log-syslog.rs
development_tools/debugging/log/src/: lib.rs
development_tools/versioning/: Cargo.toml
development_tools/versioning/examples/: semver-command.rs  semver-complex.rs  semver-latest.rs
encoding/: complex.html  csv.html  strings.html
encoding/complex/examples/: endian-byte.rs  serde-toml.rs  toml.rs
encoding/string/: Cargo.toml
errors/: handle.html
file/: dir.html  read-write.html
hardware/: processor.html
mem/: global_static.html
mem/global_static/: Cargo.toml
net/: server.html
os/: external.html
science/: mathematics.html
science/mathematics/: complex_numbers.html  linear_algebra.html  miscellaneous.html  statistics.html  trigonometry.html
src/: SUMMARY.md  about.md  intro.md  links.md
src/algorithms/: randomness.md  sorting.md
src/cli/: ansi_terminal.md  arguments.md
src/compression/: tar.md
src/concurrency/: parallel.md  threads.md
src/concurrency/thread/: Cargo.toml  crossbeam-complex.md  crossbeam-spawn.md  crossbeam-spsc.md  global-mut-state.md  threadpool-fractal.md  threadpool-walk.md
src/concurrency/thread/examples/: global-mut-state.rs  threadpool-fractal.rs  threadpool-walk.rs
src/concurrency/thread/src/: lib.rs
src/cookbook_utils/: Cargo.toml
src/cryptography/: encryption.md  hashing.md
src/database/: postgres.md  sqlite.md
src/development_tools/: versioning.md
src/development_tools/debugging/config_log/: Cargo.toml  log-custom.md  log-env-variable.md  log-mod.md  log-timestamp.md
src/development_tools/debugging/config_log/src/: lib.rs
src/development_tools/debugging/log/: Cargo.toml  log-custom-logger.md  log-debug.md  log-error.md  log-stdout.md  log-syslog.md
src/development_tools/debugging/log/examples/: log-syslog.rs
src/development_tools/versioning/: Cargo.toml  semver-command.md  semver-complex.md  semver-latest.md  semver-prerelease.md
src/development_tools/versioning/examples/: semver-prerelease.rs
src/development_tools/versioning/src/: lib.rs
src/encoding/: complex.md  csv.md
src/encoding/complex/: Cargo.toml  complex-json.md  endian-byte.md  json.md  toml.md
src/encoding/complex/src/: lib.rs
src/file/: dir.md  read-write.md
src/hardware/processor/: Cargo.toml  cpu-count.md
src/hardware/processor/src/: lib.rs
src/science/mathematics/linear_algebra/: Cargo.toml  add-matrices.md  deserialize-matrix.md  invert-matrix.md  multiply-matrices.md  multiply-scalar-vector-matrix.md  vector-norm.md
src/science/mathematics/linear_algebra/examples/: add_matrices.rs  vector_norm.rs
src/text/: regex.md
src/web/clients/api/: Cargo.toml  paginated.md
src/web/clients/api/src/: lib.rs
src/web/clients/authentication/: Cargo.toml  basic.md
text/: regex.html  string_parsing.html
text/regex/: Cargo.toml
web/: clients.html  mime.html  scraping.html  url.html
web/clients/: apis.html  authentication.html  download.html  requests.html
web/clients/requests/: Cargo.toml
web/clients/requests/examples/: web_client_header.rs  web_request_async_get.rs  web_request_get.rs
web/clients/requests/src/: lib.rs
(+215 files in other folders)
