[workspace]
members = [
	"src/algorithms/randomness",
	"src/algorithms/sorting",
	"src/cookbook_utils",
	"src/cli/ansi_terminal",
	"src/cli/arguments",
	"src/compression/tar",
	"src/concurrency/parallel",
	"src/concurrency/thread",
	"src/cryptography/encryption",
	"src/cryptography/hashing",
	"src/database/sqlite",
]
