[workspace]
members = [
	"src/algorithms/randomness",
	"src/algorithms/sorting",
	"src/cookbook_utils",
	"src/cli/ansi_terminal",
	"src/cli/arguments",
	"src/compression/tar",
	"src/concurrency/parallel",
	"src/concurrency/thread",
	"src/cryptography/encryption",
	"src/cryptography/hashing",
	"src/database/postgres",
	"src/database/sqlite",
	"src/data_structures/bitfield",
	"src/datetime/duration",
	"src/file/dir",
	"src/file/read-write",
	"src/hardware/processor",
	"src/mem/global_static",
	"src/development_tools/build_tools/cc-bundled-static",
]
