[workspace]
members = [
	"src/algorithms/randomness",
	"src/algorithms/sorting",
	"src/cookbook_utils",
	"src/cli/ansi_terminal",
	"src/cli/arguments",
	"src/compression/tar",
	"src/concurrency/parallel",
	"src/concurrency/thread",
	"src/cryptography/encryption",
	"src/cryptography/hashing",
	"src/database/postgres",
	"src/database/sqlite",
	"src/data_structures/bitfield",
	"src/datetime/duration",
	"src/datetime/parse",
	"src/development_tools/build_tools/cc-bundled-cpp",
	"src/development_tools/build_tools/cc-bundled-static",
	"src/development_tools/build_tools/cc-defines",
	"src/development_tools/debugging/config_log",
	"src/development_tools/debugging/log",
	"src/development_tools/versioning",
	"src/encoding/complex",
	"src/encoding/csv",
	"src/encoding/string",
	"src/file/dir",
	"src/file/read-write",
	"src/hardware/processor",
	"src/mem/global_static",
	"src/net/server",
	"src/os/external",
	"src/science/mathematics/complex_numbers",
	"src/science/mathematics/linear_algebra",
	"src/science/mathematics/miscellaneous",
	"src/science/mathematics/statistics",
	"src/science/mathematics/trigonometry",
	"src/text/regex",
	"src/text/string_parsing",
	"src/web/clients/api",
	"src/web/clients/authentication",
]
