[package]
name = "config_log"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
env_logger = "0.10.2"
log = "0.4.22"
log4rs = "1.3.0"

[dev-dependencies]
cookbook_utils = { path = "../../../cookbook_utils" }
