[package]
name = "debugging_log"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.2"
log = "0.4.22"
syslog = "6.1.1"

[dev-dependencies]
cookbook_utils = { path = "../../../cookbook_utils" }
