[package]
name = "thread"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
crossbeam = "0.8.1"
crossbeam-channel = "0.5.5"
image = "0.24.2"
lazy_static = "1.4.0"
num = "0.4.0"
num_cpus = "1.13.1"
ring = "0.16.20"
threadpool = "1.8.1"
walkdir = "2.3.2"

[dev-dependencies]
cookbook_utils = { path = "../../cookbook_utils" }
