[package]
name = "thread"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
crossbeam = "0.8.2"
crossbeam-channel = "0.5.6"
image = "0.24.5"
lazy_static = "1.4.0"
num = "0.4.0"
num_cpus = "1.15.0"
ring = "0.16.20"
threadpool = "1.8.1"
walkdir = "2.3.2"

[dev-dependencies]
cookbook_utils = { path = "../../cookbook_utils" }
