[package]
name = "thread"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
ring = "0.16.20"
crossbeam = "0.8.4"
crossbeam-channel = "0.5.13"
image = "0.24.9"
lazy_static = "1.5.0"
num = "0.4.3"
num_cpus = "1.16.0"
threadpool = "1.8.1"
walkdir = "2.5.0"

[dev-dependencies]
cookbook_utils = { path = "../../cookbook_utils" }
