[package]
name = "versioning"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
semver = "1.0.10"

[dev-dependencies]
cookbook_utils = { path = "../../cookbook_utils" }
