[package]
name = "encoding_complex"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
byteorder = "1.4.3"
serde = { version = "1.0.152", features = ["derive"] }
serde-hex = { version = "0.1.0", optional = true }
serde_json = "1.0.91"
toml = "0.5.10"

[dev-dependencies]
cookbook_utils = { path = "../../cookbook_utils" }

[features]
default = ["dep:serde-hex"]
