[package]
name = "encoding_complex"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
byteorder = "1.5.0"
serde = { version = "1.0.210", features = ["derive"] }
serde-hex = { version = "0.1.0", optional = true }
serde_json = "1.0.128"
toml = "0.7.8"

[dev-dependencies]
cookbook_utils = { path = "../../cookbook_utils" }

[features]
default = ["dep:serde-hex"]
