[package]
name = "hardware-processor"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num_cpus = "1.13.1"

[dev-dependencies]
cookbook_utils = { path = "../../cookbook_utils" }
