[package]
name = "web_requests"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.11.27", features = ["blocking", "json"] }
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }

[dev-dependencies]
cookbook_utils = { path = "../../../cookbook_utils" }
