[package]
name = "config_log"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
env_logger = "0.9.0"
log = "0.4.16"
log4rs = "1.0.0"

[dev-dependencies]
cookbook_utils = { path = "../../../cookbook_utils" }
