[package]
name = "debugging_log"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
syslog = "6.0.1"

[dev-dependencies]
cookbook_utils = { path = "../../../cookbook_utils" }
