[package]
name = "web_auth"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

[dependencies]
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
serde = { version = "1.0.167", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }

[dev-dependencies]
cookbook_utils = { path = "../../../cookbook_utils" }
